Just fixed up some spacing issues that were occuring with the supplies and added title background.

--- a/Illicit.css
+++ b/Illicit.css
@@ -1,12 +1,12 @@
 body{
     text-align: center;
     margin: 20px;
-    padding: 20px;
     background-color: grey;
-    
+    font-size: 40px;
 }
 
 h1{
+    background-color: rgba(0, 0, 0, 0.193);
     color:rgb(108, 31, 180);
     text-shadow: 0 0 2px black;
     border-style: solid;
@@ -14,6 +14,7 @@ h1{
 }
 
 h2{
+    font-size: 40px;
     color: purple;
     text-shadow: 0 0 1px darkred;
 }
@@ -38,7 +39,13 @@ p{
     display: grid; 
     grid-template-columns: repeat(2, 1fr); 
     gap: 5px; 
+    align-items: center; 
+    width: 70%; 
+    
+    height: auto;
+    margin: 0 auto; 
 }
+
 
 .item {
     display: flex; 
@@ -47,7 +54,7 @@ p{
     text-align: center; 
     margin-top: 10px; 
     margin-bottom: 10px;
-    font-size: 40px; 
+    font-size: 30px; 
     border: 5px purple solid;
 }
 
